--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -7,6 +7,9 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
 <!-- Sidebar -->
@@ -74,7 +77,7 @@
              data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" th:href="@{/getUsers}">Get All User Details</a>
+                <a class="collapse-item" th:href="@{/getUsers}">View Users Details</a>
 <!--                <a class="collapse-item" href="utilities-border.html">Update</a>-->
 <!--                <a class="collapse-item" href="utilities-animation.html">Delete</a>-->
                 <a class="collapse-item" th:href="@{/userRequst}">Add New User</a>
@@ -92,10 +95,10 @@
              data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Custom Utilities:</h6>
-                <a class="collapse-item" href="utilities-color.html">Colors</a>
-                <a class="collapse-item" href="utilities-border.html">Borders</a>
-                <a class="collapse-item" href="utilities-animation.html">Animations</a>
-                <a class="collapse-item" href="utilities-other.html">Other</a>
+                <a class="collapse-item" th:href="@{/getProducts}">View Products Details</a>
+<!--                <a class="collapse-item" href="utilities-border.html">Borders</a>-->
+<!--                <a class="collapse-item" href="utilities-animation.html">Animations</a>-->
+                <a class="collapse-item" th:href="@{/productRequest}">Add New Product</a>
             </div>
         </div>
     </li>
